--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "browser-sync": "^2.29.3",
     "del": "^7.0.0",
     "gulp": "^4.0.2",
+    "gulp-imagemin": "^8.0.0",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-stylelint-esm": "^1.0.0",
+    "gulp-svg-sprite": "^2.0.3",
     "sass": "^1.65.1",
     "stylelint-config-standard-scss": "^10.0.0"
   }
