--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "gulp"
+    "start": "cross-env NODE_ENV=development gulp",
+    "build": "cross-env NODE_ENV=production gulp build"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,10 @@
     "defaults"
   ],
   "stylelint": {
-    "extends": "stylelint-config-standard-scss"
+    "extends": "stylelint-config-standard-scss",
+    "rules": {
+      "media-feature-range-notation": "prefix"
+    }
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
@@ -23,15 +27,20 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
     "browser-sync": "^2.29.3",
+    "cross-env": "^7.0.3",
     "del": "^7.0.0",
     "gulp": "^4.0.2",
+    "gulp-cache-bust": "^1.4.1",
     "gulp-imagemin": "^8.0.0",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-stylelint-esm": "^1.0.0",
     "gulp-svg-sprite": "^2.0.3",
+    "postcss-combine-media-query": "^1.0.1",
+    "postcss-csso": "^6.0.1",
     "sass": "^1.65.1",
     "stylelint-config-standard-scss": "^10.0.0",
     "webpack": "^5.88.2",
