--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "stylelint": {
     "extends": "stylelint-config-standard-scss",
     "rules": {
-      "media-feature-range-notation": "prefix"
+      "media-feature-range-notation": "prefix",
+      "selector-class-pattern": null,
+      "no-descending-specificity": null
     }
   },
   "devDependencies": {
