--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "del": "^7.1.0",
     "gulp": "^5.0.0",
     "gulp-cache-bust": "^1.4.1",
-    "gulp-imagemin": "^9.0.0",
+    "gulp-imagemin": "^9.1.0",
     "gulp-postcss": "^10.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-stacksvg": "^4.0.0",
     "gulp-stylelint-esm": "^2.0.0",
-    "gulp-svg-sprite": "^2.0.3",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-csso": "^6.0.1",
-    "sass": "^1.76.0",
+    "sass": "^1.77.2",
     "stylelint-config-standard-scss": "^13.1.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
